# codepulse

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
codepulse/: __init__.py  analyzer.py  git_stats.py  main.py  reporter.py  scorer.py  template.py
